Fix issues with Quarkus-Arc and Guice conflicts